Refactor CalculatePage component to enhance error handling and loading states; add AI summary loading state; update application.yml for improved configuration management.

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,9 @@ JWT_EXPIRATION_MS=86400000
 # =================================
 API_URL=http://localhost:8080
 
+# Gemini / AI summarisation
+GEMINI_API_KEY=
+
 # =================================
 # FRONTEND CONFIGURATION
 # =================================
@@ -49,3 +52,4 @@ PGADMIN_DEFAULT_PASSWORD=admin
 # POSTGRES_PASSWORD=your-secure-production-password
 # JWT_SECRET=your-production-jwt-secret
 # VITE_API_URL=https://your-domain.com/api
+
