feat: Enhance Docker setup and API documentation; add health checks, update frontend Dockerfile, and implement root controller for Swagger redirection

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # Development Database
@@ -16,6 +16,11 @@ services:
       - postgres_dev_data:/var/lib/postgresql/data
     networks:
       - tariff_dev_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # PgAdmin for development
   pgadmin:
@@ -28,6 +33,43 @@ services:
       - "5050:80"
     depends_on:
       - db
+    networks:
+      - tariff_dev_network
+
+  # Backend API (Development)
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: tariff_backend_dev
+    restart: unless-stopped
+    environment:
+      DB_URL: jdbc:postgresql://db:5432/${POSTGRES_DB}
+      DB_USERNAME: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION_MS: ${JWT_EXPIRATION_MS}
+    ports:
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - tariff_dev_network
+    volumes:
+      - ./backend/src:/app/src # Hot reload support (optional)
+
+  # Frontend (Development)
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: tariff_frontend_dev
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
     networks:
       - tariff_dev_network
 
