--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -78,6 +78,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- REST Assured for BDD-style API testing -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- OpenPDF -->
         <dependency>
             <groupId>com.github.librepdf</groupId>
