--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -78,6 +78,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- H2 in-memory database for testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- REST Assured for BDD-style API testing -->
         <dependency>
             <groupId>io.rest-assured</groupId>
