Add tariff projection analysis documentation and implement TariffNewsSidebar component for news filtering and display

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,12 @@ JWT_EXPIRATION_MS=86400000
 API_URL=http://localhost:8080
 
 # Gemini / AI summarisation
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyCxgqgrYbMCQs9178XiPkabKLKkMGi9q-g
+
+# NewsData.io API for tariff news
+# Get your free API key from: https://newsdata.io/register
+# Free tier: 200 requests/day
+NEWSDATA_API_KEY=pub_7713507262314bd18c0fb64c8536c7bc
 
 # =================================
 # FRONTEND CONFIGURATION
