--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,11 +11,21 @@ server {
 
     # API proxy to backend
     location /api/ {
-        proxy_pass http://backend:8080/;
+        proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Add CORS headers for development
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+        
+        # Handle preflight requests
+        if ($request_method = OPTIONS) {
+            return 204;
+        }
     }
 
     # Security headers
