--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,7 +8,6 @@ spring:
     password: lordshiva15_SRI
   jpa:
     hibernate:
-    
       ddl-auto: update
     show-sql: true
     properties:
@@ -29,9 +28,16 @@ logging:
 
 app:
   jwt:
-    secret: fvbMVJWfii+dPc5Ih2W6s9IC7C+fIdZgC2B/VVnEjBM=
-    expirationMs: 86400000 # 1 day
+    secret: ${JWT_SECRET:fvbMVJWfii+dPc5Ih2W6s9IC7C+fIdZgC2B/VVnEjBM=}
+    expirationMs: ${JWT_EXPIRATION_MS:86400000} # 1 day
 gemini:
   api:
-    key: AIzaSyCxgqgrYbMCQs9178XiPkabKLKkMGi9q-g
+    key: ${GEMINI_API_KEY:AIzaSyCxgqgrYbMCQs9178XiPkabKLKkMGi9q-g}
+
+# NewsData.io API Configuration
+# Get your API key from: https://newsdata.io/register
+# Place your API key below (replace YOUR_NEWSDATA_API_KEY with actual key)
+newsdata:
+  api:
+    key: ${NEWSDATA_API_KEY:pub_7713507262314bd18c0fb64c8536c7bc}
 # Swagger UI path: http://localhost:8080/swagger-ui/index.html
