--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,20 @@
 # NEVER commit .env to version control
 
 # =================================
-# DATABASE CONFIGURATION
+# DATABASE CONFIGURATION (AWS RDS or local)
 # =================================
-DB_URL=jdbc:postgresql://localhost:5432/tariff
-DB_USERNAME=tariff
-DB_PASSWORD=tariff
+# For AWS RDS:
+# DB_URL=jdbc:postgresql://your-rds-endpoint:5432/postgres
+# DB_USERNAME=postgres
+# DB_PASSWORD=your-strong-password
+#
+# For local Postgres (docker-compose dev):
+# DB_URL=jdbc:postgresql://db:5432/tariff
+# DB_USERNAME=tariff
+# DB_PASSWORD=tariff
+DB_URL=jdbc:postgresql://localhost:5432/postgres
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 # PostgreSQL Docker Configuration
 POSTGRES_DB=tariff
@@ -28,20 +37,14 @@ JWT_EXPIRATION_MS=86400000
 # API CONFIGURATION
 # =================================
 API_URL=http://localhost:8080
-
-# Gemini / AI summarisation
 GEMINI_API_KEY=AIzaSyCxgqgrYbMCQs9178XiPkabKLKkMGi9q-g
-
-# NewsData.io API for tariff news
-# Get your free API key from: https://newsdata.io/register
-# Free tier: 200 requests/day
 NEWSDATA_API_KEY=pub_7713507262314bd18c0fb64c8536c7bc
 
 # =================================
 # FRONTEND CONFIGURATION
 # =================================
-VITE_API_URL=http://localhost:8080
-VITE_APP_NAME=Tariff Calculator
+VITE_API_URL=http://localhost:8081
+VITE_APP_NAME=TARIFFSHERIFF
 VITE_APP_VERSION=1.0.0
 
 # =================================
@@ -57,4 +60,3 @@ PGADMIN_DEFAULT_PASSWORD=admin
 # POSTGRES_PASSWORD=your-secure-production-password
 # JWT_SECRET=your-production-jwt-secret
 # VITE_API_URL=https://your-domain.com/api
-
