--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -44,9 +44,9 @@ services:
     container_name: tariff_backend_dev
     restart: unless-stopped
     environment:
-      DB_URL: jdbc:postgresql://db:5432/${POSTGRES_DB}
-      DB_USERNAME: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_URL: ${DB_URL}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRATION_MS: ${JWT_EXPIRATION_MS}
       GEMINI_API_KEY: ${GEMINI_API_KEY:-AIzaSyCxgqgrYbMCQs9178XiPkabKLKkMGi9q-g}
